Cropped pictures, fixed height

--- a/dinosaurs/public/style.css
+++ b/dinosaurs/public/style.css
@@ -156,6 +156,7 @@ nav a:hover {
 
 .period-card img {
   width: 100%;
+  height: auto;
   border-radius: 4px;
   margin-bottom: 1rem;
 }
